apps/boys/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boys
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  labels:
    app.kubernetes.io/part-of: boys
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
