apps/boys/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boys
  labels:
    app.kubernetes.io/name: boys
    app.kubernetes.io/part-of: boys
spec:
  clusterIP: 10.233.23.97
  clusterIPs:
    - 10.233.23.97
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app.kubernetes.io/name: boys
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
