apps/boys/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boys
  labels:
    app.kubernetes.io/name: boys
    app.kubernetes.io/part-of: boys
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - boys.soyspray.vip
      secretName: boys-tls
  rules:
    - host: boys.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boys
                port:
                  name: http
